added preliminary css styling

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header class="top-header">
-		<span>Journey through the Bay Area</span>
-		<h1 class="main-heading">San Francisco, California</h1>
+	<header id="top" class="top-banner">
+		<span class="title">Journey through the Bay Area</span>
+		<h1 class="top-heading">San Francisco, California</h1>
 	</header>
+
 	<div>
-		<p>
-			"San Francisco is a city where people are never more abroad than when they are at home." -Benjamin F. Taylor
+		<p class="intro">
+			"San Francisco is a city where people are never more <span>abroad</span> than when they are at <span>home</span>." 
+			<br>-Benjamin F. Taylor
 		</p>
 
 		<a href="#">Find out more</a>
@@ -23,10 +25,16 @@
 				San Francisco is a city concentrated with exciting and invigorating restaurants.
 			</p>
 			<a href="#">See the Top 10 Spots</a>
+
+			<h3>A Place to Stay</h3>
+			<p>
+				Find a place to rest your head. Check out Hotel Deals.
+			</p>
 		</div>
 
 		<footer>
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
+			<a href="#top">Back to top &raquo;</a>
 		</footer>
 	</div>
 </body>
