added img files, created folder for css

--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html>
 <head>
 	<title>San Francisco</title>
-	<link rel="stylesheet" type="text/css" href="page.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header id="top" class="top-banner">
 		<span class="title">Journey through the Bay Area</span>
 		<h1 class="top-heading">San Francisco, California</h1>
+		<img class="arrow" src="img/arrow.svg" alt="down arrow">
 	</header>
 
-	<div>
+	<div class="primary-content">
 		<p class="intro">
 			"San Francisco is a city where people are never more <span>abroad</span> than when they are at <span>home</span>." 
 			<br>-Benjamin F. Taylor
 		</p>
 
-		<a href="#">Find out more</a>
+		<a href="#" class="callout">Find out more</a>
 
-		<div id="main-content">
+		<div id="main-content" class="restaurants">
 			<h2>Eat Your Heart Out</h2>
 			<p>
 				San Francisco is a city concentrated with exciting and invigorating restaurants.
 			</p>
-			<a href="#">See the Top 10 Spots</a>
+			<a href="#" class="callout">See the Top 10 Spots</a>
+		</div>
+
+		<div class="secondary-content">
 
 			<h3>A Place to Stay</h3>
 			<p>
