completed landing page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>San Francisco</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header id="top" class="top-banner">
@@ -11,15 +12,14 @@
 		<img class="arrow" src="img/arrow.svg" alt="down arrow">
 	</header>
 
-	<div class="primary-content">
+	<div class="primary-content top-border">
 		<p class="intro">
-			"San Francisco is a city where people are never more <span>abroad</span> than when they are at <span>home</span>." 
-			<br>-Benjamin F. Taylor
+			"San Francisco is a city where people are never more <span>abroad</span> than when they are at <span>home</span>." -Benjamin F. Taylor
 		</p>
 
 		<a href="#" class="callout">Find out more</a>
 
-		<div id="main-content" class="restaurants">
+		<div class="restaurants">
 			<h2>Eat Your Heart Out</h2>
 			<p>
 				San Francisco is a city concentrated with exciting and invigorating restaurants.
@@ -27,15 +27,33 @@
 			<a href="#" class="callout">See the Top 10 Spots</a>
 		</div>
 
-		<div class="secondary-content">
+		<div class="secondary-content top-border group">
+			<div class="hotels">
+				<img src="img/sf-buildings.jpeg" alt="Buildings">
+				<h3>A Place to Stay</h3>
+				<p>
+					Find a place to rest your head. Check out Hotel Deals.
+				</p>
+				<ul>
+					<li><a href="#">The Fairmont</a></li>
+					<li><a href="#">The Ritz-Carlton</a></li>
+					<li><a href="#">The Marriot</a></li>
+				</ul>
+			</div>
 
-			<h3>A Place to Stay</h3>
-			<p>
-				Find a place to rest your head. Check out Hotel Deals.
-			</p>
+			<div class="tips">
+				<img src="img/market-st.jpeg" alt="Market St">
+				<h3>Pack Accordingly</h3>
+				<p>Even though San Francisco is in California, the weather is typically chilly, windy, and foggy. Remember to:</p>
+				<ol>
+					<li>Dress in layers</li>
+					<li>Bring a windbreaker</li>
+					<li>Wear comfortable shoes</li>
+				</ol>
+			</div>
 		</div>
 
-		<footer>
+		<footer class="main-footer">
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
